# cc-fi

./: .gitignore  .mise.toml  README.md  claude-session-finder-POSTMORTEM.md  glyphs.txt  install.sh  nerddfont_cheatsheet.yaml  pyproject.toml  requirements.in  requirements.txt
cc_fi/: __init__.py  constants.py  main.py
cc_fi/core/: __init__.py  cache.py  deduplicator.py  filters.py  formatter.py  fzf.py  indexer.py  parser.py  search.py
cc_fi/models/: __init__.py  session.py
tests/: __init__.py
tests/unit/: __init__.py  test_deduplicator.py  test_filters.py  test_formatter.py  test_parser.py  test_search.py
